--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@ project/target
 tmp
 .history
 dist
-/.idea
+/.idea/*
 /*.iml
 /out
-/.idea_modules
+/.idea_modules/*
 /.classpath
 /.project
 /RUNNING_PID
@@ -34,3 +34,4 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+.idea*
